# sale-promotion

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  test-requirements.txt
coupon_chatter/: README.rst  __manifest__.py
coupon_chatter/readme/: CONTRIBUTORS.md
loyalty_card_fixed_expiration_date/: README.rst
loyalty_card_fixed_expiration_date/i18n/: ca.po  es.po  it.po
loyalty_coupon_no_mail/: README.rst  __manifest__.py
loyalty_coupon_no_mail/models/: loyalty_mail.py  loyalty_program.py
loyalty_coupon_no_mail/views/: loyalty_mail_views.xml  loyalty_program_views.xml
loyalty_criteria_multi_product/: README.rst  __manifest__.py
loyalty_criteria_multi_product/models/: loyalty_criteria.py
loyalty_incompatibility/: README.rst  __manifest__.py
loyalty_limit/: README.rst  __manifest__.py
loyalty_mass_mailing/: README.rst  __manifest__.py
loyalty_multi_gift/: README.rst  __manifest__.py
loyalty_partner_applicability/: README.rst  __manifest__.py
loyalty_program_chatter/: README.rst  __manifest__.py
sale_loyalty_auto_refresh/: README.rst  __manifest__.py
sale_loyalty_criteria_multi_product/: README.rst  __manifest__.py
sale_loyalty_incompatibility/: README.rst  __manifest__.py
sale_loyalty_initial_date_validity/: README.rst  __manifest__.py
sale_loyalty_limit/: README.rst  __manifest__.py
sale_loyalty_multi_gift/: README.rst  __manifest__.py
sale_loyalty_order_info/: README.rst  __manifest__.py
sale_loyalty_order_line_link/: README.rst  __manifest__.py
sale_loyalty_order_suggestion/: README.rst  __manifest__.py
sale_loyalty_order_suggestion_multi_gift/: README.rst  __manifest__.py
sale_loyalty_order_suggestion_multi_product/: README.rst
sale_loyalty_partner/: README.rst  __manifest__.py
sale_loyalty_partner_applicability/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml  setup.py
website_sale_loyalty_page/: README.rst
website_sale_loyalty_suggestion_wizard/: README.rst
website_sale_loyalty_suggestion_wizard_multi_gift/: README.rst
website_sale_loyalty_suggestion_wizard_multi_product/: README.rst
(+108 files in other folders)
