[project]
name = "odoo-addons-oca-sale-promotion"
version = "18.0.20250825.1"
dependencies = [
    "odoo-addon-loyalty_criteria_multi_product==18.0.*",
    "odoo-addon-loyalty_incompatibility==18.0.*",
    "odoo-addon-loyalty_limit==18.0.*",
    "odoo-addon-loyalty_multi_gift==18.0.*",
    "odoo-addon-loyalty_program_chatter==18.0.*",
    "odoo-addon-sale_loyalty_criteria_multi_product==18.0.*",
    "odoo-addon-sale_loyalty_incompatibility==18.0.*",
    "odoo-addon-sale_loyalty_limit==18.0.*",
    "odoo-addon-sale_loyalty_multi_gift==18.0.*",
    "odoo-addon-sale_loyalty_order_line_link==18.0.*",
    "odoo-addon-sale_loyalty_order_suggestion==18.0.*",
    "odoo-addon-sale_loyalty_order_suggestion_multi_gift==18.0.*",
    "odoo-addon-sale_loyalty_partner==18.0.*",
    "odoo-addon-website_sale_loyalty_page==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
