[project]
name = "odoo-addons-oca-sale-promotion"
version = "17.0.20251110.2"
dependencies = [
    "odoo-addon-coupon_chatter>=17.0dev,<17.1dev",
    "odoo-addon-loyalty_card_fixed_expiration_date>=17.0dev,<17.1dev",
    "odoo-addon-loyalty_limit>=17.0dev,<17.1dev",
    "odoo-addon-loyalty_partner_applicability>=17.0dev,<17.1dev",
    "odoo-addon-sale_loyalty_order_line_link>=17.0dev,<17.1dev",
    "odoo-addon-sale_loyalty_partner_applicability>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
